# verified-context-layer

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  STATUS.md  pyproject.toml  requirements.txt
.agent/rules/: handoff-rule.md
.agent/workflows/: handoff.md
.claude/commands/: deploy.md  eval.md  observe.md  report.md  review.md  scaffold.md  security.md
.claude/current/: ARCHITECTURE.md  BUILD_GUIDELINES.md  PHASE_SPEC_steward_workflow.md  SETUP_SPEC.md  challenge.md  concept.md  eval_results.md  exercise.md  lesson.md  plan.md  report.md  requirements.md
audit/terraform/: main.tf  terraform.tfvars.example  variables.tf
deploy/: DEPLOY.md  Dockerfile  build.sh  cloudbuild.yaml  requirements.txt
deploy/terraform/: .terraform.lock.hcl  main.tf  terraform.tfvars.example  variables.tf  versions.tf
docs/: CONTROL_PLANE_DESIGN.md
docs/archive/: L210_lesson.md  PHASE_SPEC_triage_audit.md  eval_results.md  tool-stack.md
docs/diagrams/: c4_deployment.dot  c4_deployment.mermaid  negative_sequence_flow.dot  repo_cloud_mapping.dot  repo_cloud_mapping.mermaid  state_transition_map.dot  (+1 more)
infra/: 01_enable_apis.sh  02_create_channels.sh  03_create_policy.sh  04_verify.sh
manageskills/: OPS.md  SKILL_README.md  ai_md_converter.py  setup_context_structure.py
schemas/: governance_drift.json  verification_v8_certtext.json
scripts/: leak_scan.sh
setup/: SETUP.md
src/: vcl.py  vcl_triage.py  vcl_wrapper.py
steward/: walkthrough_cosmetic.md  walkthrough_substantive.md
vcl_audience_demo/: README.md  agent.py  run_demo.py
(+20 files in other folders)
