[project]
name = "verified-context-layer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bigquery-agent-analytics[llm]>=0.4.0",
    "google-adk>=2.5.0",
    "google-cloud-aiplatform>=1.161.0",
    "google-cloud-bigquery>=3.42.2",
    "google-cloud-bigquery-storage>=2.39.0",
    "google-genai>=2.12.1",
    "mcp>=1.28.1",
    "pyarrow>=25.0.0",
    "python-dotenv>=1.2.2",
]
